--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,14 +1,16 @@
 {
     "files.exclude": {
-        "**/.git": false,
+        "**/.git": true,
         "**/.svn": true,
         "**/.hg": true,
-        "**/CVS": true,
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
         "**/.github": true,
+        "**/.gitignore": true,
+        "**/.hintrc": true,
         "**/.history": true,
         "**/.vscode": true,
+        "**/CVS": true,
         ".history": true
     },
     "explorerExclude.backup": {}
